# plateforme-data-demo-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python_build_main.yml  python_build_push.yml  python_lint_test.yml  python_run_main.yml  python_test_main.yml
data/immo/: mandats.csv
docs/: sources.md
src/: main.py
src/utils/: configuration.py  data_sources.py  gcp.py  logger.py
tests/: test_dependencies.py
utils/: configuration.py  data_sources.py
